--- a/app/themes/mission-control/assets/styles/main.scss
+++ b/app/themes/mission-control/assets/styles/main.scss
@@ -1,6 +1,10 @@
 // MAIN.SCSS
 // ---------
 
+// FONTFACE (Delete if n/a or uncomment to use)
+// ============================================================
+// @import "misc/font-face.scss";        // Font face imports and styles
+
 // VENDOR STYLES
 // ============================================================
 @charset "UTF-8";
