--- a/app/themes/mission-control/assets/styles/utilities/extends/base.scss
+++ b/app/themes/mission-control/assets/styles/utilities/extends/base.scss
@@ -1,7 +1,8 @@
 // Base: Extends
 // -------------
 
-@import 'ext-utilities';       // Practical extends effecting Layout or Stucture (but not style!)
-@import 'ext-grid';            // Grid related extends
-@import 'ext-styles';          // Extends used to style elements
-@import 'ext-type';            // Typography & Type Style extends
+@import 'ext-utilities';        // Practical extends effecting Layout or Stucture (but not style!)
+@import 'ext-components';       // Extends related to components
+@import 'ext-grid';             // Grid related extends
+@import 'ext-styles';           // Extends used to style elements
+@import 'ext-type';             // Typography extends
