--- a/app/themes/mission-control/style.css
+++ b/app/themes/mission-control/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name:         Fleisher Art Memorial
-Theme URI:          http://fleisher.org
-Description:        WordPress theme by J2 for Fleisher Art Memorial
+Theme Name:         Mission Control by J2
+Theme URI:          http://j2made.com
+Description:        WordPress theme by J2 Design Partnership
 Version:            0.1.0
 Author:             J2 Design Partnership
 Author URI:         http://j2made.com/
