--- a/app/themes/mission-control/assets/styles/utilities/extends/_ext-type.scss
+++ b/app/themes/mission-control/assets/styles/utilities/extends/_ext-type.scss
@@ -1,6 +1,23 @@
 // Typography Extends
 // ------------------
 
+// BASICS
+// ============================================================
+
+%semi-bold {
+  font-weight: 600;
+}
+
+%bold {
+  font-weight: 700;
+}
+
+%bold-caps {
+  font-weight: 900;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
 // LINKS
 // ============================================================
 
@@ -25,6 +42,85 @@
   }
 }
 
-// TYPE STYLES
+
+// HEADINGS
 // ============================================================
+
+%page-title {
+  @extend %bold;
+  font-size: rem(36);
+}
+
+%large-title {
+  @extend %bold;
+  font-size: rem(22);
+
+  @include media($small) {
+    font-size: rem(32);
+  }
+
+  @include media($primary-breakpoint) {
+    font-size: rem(46);
+  }
+}
+
+%copy-bold {
+  @extend %bold;
+  font-size: rem(22);
+}
+
+%copy-bold-small {
+  @extend %semi-bold;
+  font-size: rem(18);
+}
+
+%head-1 {
+  font-size: rem(22);
+  line-height: 1.2;
+
+  @include media($medium) {
+    font-size: rem(32);
+  }
+
+}
+
+%head-2 {
+  font-size: rem(14);
+
+  @include media($small) {
+    font-size: rem(16);
+  }
+
+  @include media($medium) {
+    font-size: rem(20);
+  }
+}
+
+%head-3 {
+  @extend %bold-caps;
+  font-size: rem(12);
+
+  @include media($small) {
+    font-size: rem(15);
+  }
+}
+
+// SUBHEADS
+// ============================================================
+
+%subhead-1 {
+  color: $brand-color;
+  font-size: rem(12);
+  margin: 0;
+}
+
+%subhead-2 {
+  font-size: rem(14);
+  font-weight: 600;
+  margin: 0 0 10px;
+
+  @include media($small) {
+    font-size: rem(18);
+  }
+}
 
