--- a/app/themes/mission-control/dist-dev/styles/main.css
+++ b/app/themes/mission-control/dist-dev/styles/main.css
@@ -162,7 +162,6 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 hr {
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
 
@@ -278,8 +277,6 @@ input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-o
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -350,7 +347,8 @@ html {
   right: 0; }
 
 a {
-  transition: all 0.35s; }
+  -webkit-transition: all 0.35s;
+          transition: all 0.35s; }
 
 .list-unstyled {
   padding: 0;
