- Theme sass updates

--- a/app/themes/mission-control/assets/styles/layouts/_layouts.scss
+++ b/app/themes/mission-control/assets/styles/layouts/_layouts.scss
@@ -1,9 +1,10 @@
 // Base: Layouts
 // -------------
 
-@import "header/base";             // Header Styles
-@import "page-header/base";        // Page-Header styles: global, specific
-@import "pages/base";              // Page Related Styles: global, specific
-@import "sidebar/base";            // Sidebar Styles, global, specific
-@import "layout-components/base";  // Singular Component Styles unrelated to a specific group
-@import "footer/base";             // Footer Files
+@import 'header/base';             // Header Styles
+@import 'page-header/base';        // Page-Header styles: global, specific
+@import 'pages/base';              // Page Related Styles: global, specific
+@import 'archives/base';           // Archive Styles, global, specific
+@import 'sidebar/base';            // Sidebar Styles, global, specific
+@import 'layout-components/base';  // Singular Component Styles unrelated to a specific group
+@import 'footer/base';             // Footer Files
