--- a/app/themes/mission-control/assets/styles/utilities/_utilities.scss
+++ b/app/themes/mission-control/assets/styles/utilities/_utilities.scss
@@ -2,9 +2,6 @@
 // ---------------
 
 // Sass Stuff
-@import "variables/base";   // Variables
-@import "extends/base";     // Extends
-@import "mixins/base";      // Mixins
-
-// Styles
-@import "globals/base";     // Global Styles
+@import 'variables/base';   // Variables
+@import 'extends/base';     // Extends
+@import 'mixins/base';      // Mixins
