--- a/app/themes/mission-control/assets/styles/utilities/variables/base.scss
+++ b/app/themes/mission-control/assets/styles/utilities/variables/base.scss
@@ -1,9 +1,10 @@
 // Base: Variables
 // ---------------
 
-@import "_var-fonts";             // Fonts and Typography
-@import "_var-colors";            // Colors
-@import "_var-scaffolding";       // Grid, Layout Structures
+@import 'var-fonts';             // Fonts and Typography
+@import 'var-colors';            // Colors
+@import 'var-scaffolding';       // Grid, Layout Structures
 
 // Custom Sytles
-@import "_var-elements";          // Visual style variables for elements
+@import 'var-elements';          // Visual style variables for elements
+@import 'var-utilities';         // Vars related to utility mixins or @extends
