--- a/app/themes/mission-control/assets/styles/main.scss
+++ b/app/themes/mission-control/assets/styles/main.scss
@@ -8,7 +8,7 @@
 // VENDOR STYLES
 // ============================================================
 @charset 'UTF-8';
-@import '../../bower_components/normalize-scss/_normalize';                   // Normalize
+@import '../../bower_components/normalize-scss/normalize';                    // Normalize
 @import '../../bower_components/bourbon/app/assets/stylesheets/bourbon';      // Bourbon
 @import '../../bower_components/neat/app/assets/stylesheets/neat';            // Bourbon Neat
 
@@ -16,5 +16,6 @@
 // THEME STYLES
 // ============================================================
 @import 'utilities/utilities';          // Utilities
+@import '_global/base';                 // Globals Base
 @import 'components/components';        // Components Base
 @import 'layouts/layouts';              // Layouts Base
