--- a/app/themes/mission-control/assets/styles/utilities/mixins/base.scss
+++ b/app/themes/mission-control/assets/styles/utilities/mixins/base.scss
@@ -2,7 +2,7 @@
 // ------------
 
 // Import all Mixins
-@import "mix-utilities";      // Practical Mixins related to layout but not styling
-@import "mix-scaffolding";    // Layout and structural element mixins
-@import "mix-typography";     // Mixins related to type
-@import "mix-elements";       // Mixins related to element styles (lists, sections, etc.)
+@import 'mix-utilities';      // Practical Mixins related to layout but not styling
+@import 'mix-scaffolding';    // Layout and structural element mixins
+@import 'mix-typography';     // Mixins related to type
+@import 'mix-elements';       // Mixins related to element styles (lists, sections, etc.)
