• Revised buttons. Made basic btn style just the necessities and moved styles to btn-styler

--- a/app/themes/mission-control/assets/styles/components/_buttons.scss
+++ b/app/themes/mission-control/assets/styles/components/_buttons.scss
@@ -1,13 +1,20 @@
 // Button Styles
 // -------------
 
+//====================================================
+// Edit base button-styler mixin in _mix-elements.scss
+//====================================================
+
 .btn {
   @extend %btn;
+}
+
+.btn-default {
   @include button-styler;
 }
 
 // Example using button-styler:
+
 .btn-light {
   @include button-styler($white);
 }
-
