--- a/app/themes/mission-control/assets/styles/utilities/mixins/_mix-elements.scss
+++ b/app/themes/mission-control/assets/styles/utilities/mixins/_mix-elements.scss
@@ -6,19 +6,37 @@
 
 @mixin button-styler(
 
-    // Base Vars
+    // Base
     $padding: 10px 20px,
     $color: $base-font-color,
     $background: $brand-color,
     $font-weight: normal,
-
-    // Hover Vars
-    $hover-background: darken($background, 5%),
-
-    // Null Vars (Optional)
     $border: null,
+
+    // Active
+    $active-border: null,
+    $active-color: null,
+    $active-background: null,
+
+    // Focus
+    $focus-border: null,
+    $focus-color: null,
+    $focus-background: null,
+
+    // Active
+    $focus-border: null,
+    $focus-color: null,
+    $focus-background: null,
+
+    // Visited
+    $visited-border: null,
+    $visited-color: null,
+    $visited-background: null,
+
+    // Hover
     $hover-border: null,
-    $hover-color: null
+    $hover-color: null,
+    $hover-background: null
 
   ) {
 
@@ -35,17 +53,71 @@
      border: $border;
   }
 
-  &:hover {
-    background-color: $hover-background;
-    color: $color;
+  // Active
+  @if $active-color != null or $active-background != null or $active-color != null {
+    &:active {
+      background-color: $active-background;
+      color: $color;
 
-    // Optional Properties
-    @if $hover-color != null {
-       color: $hover-color;
+      // Optional Properties
+      @if $active-color != null {
+         color: $active-color;
+      }
+
+      @if $active-border != null {
+         border: $active-border;
+      }
     }
+  }
 
-    @if $hover-border != null {
-       border: $hover-border;
+  // Focus
+  @if $focus-color != null or $focus-background != null or $focus-color != null {
+    &:focus {
+      background-color: $focus-background;
+      color: $color;
+
+      // Optional Properties
+      @if $focus-color != null {
+         color: $focus-color;
+      }
+
+      @if $focus-border != null {
+         border: $focus-border;
+      }
+    }
+  }
+
+  // Visited
+  @if $visited-color != null or $visited-background != null or $visited-color != null {
+    &:visited {
+      background-color: $visited-background;
+      color: $color;
+
+      // Optional Properties
+      @if $visited-color != null {
+         color: $visited-color;
+      }
+
+      @if $visited-border != null {
+         border: $visited-border;
+      }
+    }
+  }
+
+  // Hover
+  @if $hover-color != null or $hover-background != null or $hover-color != null {
+    &:hover {
+      background-color: $hover-background;
+      color: $color;
+
+      // Optional Properties
+      @if $hover-color != null {
+         color: $hover-color;
+      }
+
+      @if $hover-border != null {
+         border: $hover-border;
+      }
     }
   }
 }
