--- a/app/themes/mission-control/assets/styles/utilities/variables/_var-fonts.scss
+++ b/app/themes/mission-control/assets/styles/utilities/variables/_var-fonts.scss
@@ -1,6 +1,13 @@
 // Variables: Typography
 // ---------------------
 
+// Font-Face
+// Format via Bourbon.io
+// http://bourbon.io/docs/#font-face
+// =============================================================================
+
+// @include font-face("source-sans-pro", "/app/themes/mission-control/dist/fonts/source-sans-pro-regular");
+
 // Fonts
 $serif:							      $georgia;
 $sans-serif:						  $helvetica;
