--- a/app/themes/mission-control/assets/styles/utilities/variables/_var-scaffolding.scss
+++ b/app/themes/mission-control/assets/styles/utilities/variables/_var-scaffolding.scss
@@ -34,4 +34,4 @@ $primary-breakpoint: $medium; // When the site undergoes it most radical changes
 $visual-grid: false;
 $visual-grid-color: yellow;
 $visual-grid-index: front;
-$visual-grid-opacity: 0.5;
+$visual-grid-opacity: .5;
