--- a/app/themes/mission-control/assets/styles/_global/base.scss
+++ b/app/themes/mission-control/assets/styles/_global/base.scss
@@ -1,6 +1,6 @@
 // Base: Global
 // ------------
 
-@import 'global';         // Base global styles
-@import 'type';           // Base type styles
-@import 'scaffolding';    // Base scaffolding styles
+@import 'global';           // Base global styles
+@import 'typography/base';  // Typography
+@import 'scaffolding';      // Base scaffolding styles
