--- a/app/themes/mission-control/assets/styles/utilities/extends/base.scss
+++ b/app/themes/mission-control/assets/styles/utilities/extends/base.scss
@@ -5,4 +5,4 @@
 @import 'ext-components';       // Extends related to components
 @import 'ext-grid';             // Grid related extends
 @import 'ext-styles';           // Extends used to style elements
-@import 'ext-type';             // Typography extends
+@import 'typography/base';      // Typography extends
