--- a/app/themes/mission-control/assets/styles/_global/_global.scss
+++ b/app/themes/mission-control/assets/styles/_global/_global.scss
@@ -13,6 +13,13 @@
 	box-sizing: border-box;
 }
 
+
+body, html {
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+}
+
 body {
 	@include font-feature-settings("kern","liga","frac", "pnum");
 	-webkit-font-smoothing: antialiased;
@@ -21,6 +28,14 @@ body {
 	font-family: $base-font-family;
 	font-size: $base-font-size;
 	line-height: $base-line-height;
+	overflow: hidden;
+}
+
+// HEADER RESETS
+// ============================================================
+
+h1, h2, h3, h4, h5, h6 {
+	@extend %header-reset;
 }
 
 
