--- a/app/themes/mission-control/assets/styles/_global/typography/base.scss
+++ b/app/themes/mission-control/assets/styles/_global/typography/base.scss
@@ -2,5 +2,6 @@
 // ----------
 
 @import 'type-block';         // Block level typography, <p>, <h1> - <h6>
+@import 'type-headers';       // Header styles
 @import 'type-links';         // Link styles
 @import 'type-lists';         // List styles
