--- a/app/themes/mission-control/assets/styles/_global/_global.scss
+++ b/app/themes/mission-control/assets/styles/_global/_global.scss
@@ -35,7 +35,7 @@ body {
 // ============================================================
 
 h1, h2, h3, h4, h5, h6 {
-	@extend %header-reset;
+	@extend %header-reset;  // Keeps things organized for header @extends
 }
 
 
