removed link extends, updated trans css to use bourbon mixins

--- a/app/themes/mission-control/assets/styles/main.scss
+++ b/app/themes/mission-control/assets/styles/main.scss
@@ -4,9 +4,9 @@
 // VENDOR STYLES
 // ============================================================
 @charset 'UTF-8';
-@import '../../bower_components/normalize-scss/normalize';                   // Normalize
+@import '../../bower_components/normalize-scss/_normalize.scss';                   // Normalize
 @import '../../bower_components/meyer-reset/stylesheets/meyer-reset';        // Meyer Reset
-@import '../../bower_components/sanitize-css/sanitize';                       // Sanitize
+@import '../../bower_components/sanitize-css/sanitize.scss';                       // Sanitize
 @import '../../bower_components/bourbon/app/assets/stylesheets/bourbon';      // Bourbon
 @import '../../bower_components/neat/app/assets/stylesheets/neat';            // Bourbon Neat
 
