--- a/app/themes/mission-control/assets/styles/_global/_global.scss
+++ b/app/themes/mission-control/assets/styles/_global/_global.scss
@@ -5,35 +5,41 @@
 // ============================================================
 
 * {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	vertical-align: baseline;
-	box-sizing: border-box;
+  border: 0;
+  box-sizing: border-box;
+  margin: 0;
+  outline: 0;
+  padding: 0;
+  vertical-align: baseline;
 }
 
 
-body, html {
-	width: 100%;
-	height: 100%;
-	min-height: 100%;
+body,
+html {
+  height: 100%;
+  min-height: 100%;
+  width: 100%;
 }
 
 body {
-	@include font-feature-settings("kern","liga","frac", "pnum");
-	-webkit-font-smoothing: antialiased;
-	background-color: $base-background-color;
-	color: $base-font-color;
-	font-family: $base-font-family;
-	font-size: $base-font-size;
-	line-height: $base-line-height;
-	overflow: hidden;
+  @include font-feature-settings('kern', 'liga', "frac", 'pnum');
+  background-color: $base-background-color;
+  color: $base-font-color;
+  font-family: $base-font-family;
+  font-size: $base-font-size;
+  -webkit-font-smoothing: antialiased;
+  line-height: $base-line-height;
+  overflow: hidden;
 }
 
 // HEADER RESETS
 // ============================================================
 
-h1, h2, h3, h4, h5, h6 {
-	@extend %header-reset;  // Keeps things organized for header @extends
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @extend %header-reset;  // Keeps things organized for header @extends
 }
