Initial clean-up complete

--- a/app/themes/mission-control/assets/styles/_global/typography/_type-links.scss
+++ b/app/themes/mission-control/assets/styles/_global/typography/_type-links.scss
@@ -2,16 +2,17 @@
 // ============================================================
 
 a {
+  @extend %standard-trans;
   color: $base-link-color;
   text-decoration: none;
-  @extend %standard-trans;
 
   &:hover {
     color: $hover-link-color;
     text-decoration: none;
   }
 
-  &:active, &:focus {
+  &:active,
+  &:focus {
     color: $hover-link-color;
     outline: none;
   }
