--- a/app/themes/mission-control/assets/styles/_global/typography/base.scss
+++ b/app/themes/mission-control/assets/styles/_global/typography/base.scss
@@ -1,7 +1,7 @@
 // Base: Type
 // ----------
 
-@import 'type-block';         // Block level typography, <p>, <h1> - <h6>
 @import 'type-headers';       // Header styles
 @import 'type-links';         // Link styles
 @import 'type-lists';         // List styles
+@import 'type-styles';        // Type Styles for page base
