--- a/app/themes/mission-control/assets/styles/utilities/variables/_var-scaffolding.scss
+++ b/app/themes/mission-control/assets/styles/utilities/variables/_var-scaffolding.scss
@@ -32,6 +32,6 @@ $primary-breakpoint: $medium; // When the site undergoes it most radical changes
 
 // Base Settings
 $visual-grid: false;
-$visual-grid-color: yellow;
+$visual-grid-color: #ff0;
 $visual-grid-index: front;
 $visual-grid-opacity: .5;
