--- a/app/themes/mission-control/assets/styles/_global/typography/_type-headers.scss
+++ b/app/themes/mission-control/assets/styles/_global/typography/_type-headers.scss
@@ -1,32 +1,14 @@
 // Header Styles
 // -------------
 
+// HEADER RESETS
+// ============================================================
+
 h1,
-.head-1 {
-  @extend %head-1;
-}
-
 h2,
-.head-2 {
-  @extend %head-2;
-}
-
 h3,
-.head-3 {
-  @extend %head-3;
-}
-
 h4,
-.head-4 {
-  @extend %head-4;
-}
-
 h5,
-.head-5 {
-  @extend %head-5;
-}
-
-h6,
-.head-6 {
-  @extend %head-6;
+h6 {
+  @extend %header-reset;  // Keeps things organized for header @extends
 }
