--- a/app/themes/mission-control/assets/styles/utilities/variables/_var-colors.scss
+++ b/app/themes/mission-control/assets/styles/utilities/variables/_var-colors.scss
@@ -7,15 +7,15 @@ $white: #fff;
 $black: darken($white, 95%);
 
 // Grayscale
-$black-10: darken(#fff, 10%);
-$black-20: darken(#fff, 20%);
-$black-30: darken(#fff, 30%);
-$black-40: darken(#fff, 40%);
-$black-50: darken(#fff, 50%);
-$black-60: darken(#fff, 60%);
-$black-70: darken(#fff, 70%);
-$black-80: darken(#fff, 80%);
-$black-90: darken(#fff, 90%);
+$black-10: darken($white, 10%);
+$black-20: darken($white, 20%);
+$black-30: darken($white, 30%);
+$black-40: darken($white, 40%);
+$black-50: darken($white, 50%);
+$black-60: darken($white, 60%);
+$black-70: darken($white, 70%);
+$black-80: darken($white, 80%);
+$black-90: darken($white, 90%);
 
 
 // BRAND COLORS
