renamed _global folder

--- a/app/themes/mission-control/assets/styles/main.scss
+++ b/app/themes/mission-control/assets/styles/main.scss
@@ -13,6 +13,6 @@
 // THEME STYLES
 // ============================================================
 @import 'utilities/utilities';          // Utilities
-@import '_global/base';                 // Globals Base
+@import 'global/base';                 // Globals Base
 @import 'components/components';        // Components Base
 @import 'layouts/layouts';              // Layouts Base
