--- a/app/themes/mission-control/assets/styles/utilities/_utilities.scss
+++ b/app/themes/mission-control/assets/styles/utilities/_utilities.scss
@@ -1,7 +1,9 @@
 // Base: Utilities
 // ---------------
 
-// Sass Stuff
+// SASS STUFF
+// =============================================================================
+
 @import 'variables/base';   // Variables
 @import 'extends/base';     // Extends
 @import 'mixins/base';      // Mixins
