removed unused files, renamed btn extend to btn-reset

--- a/app/themes/mission-control/assets/styles/components/_buttons.scss
+++ b/app/themes/mission-control/assets/styles/components/_buttons.scss
@@ -2,10 +2,10 @@
 // -------------
 
 .btn {
-  @extend %btn;
+  @extend %btn-reset;
 }
 
 #{$all-buttons},
 .btn-default {
-  @extend %btn;
+  @extend %btn-reset;
 }
