--- a/app/themes/mission-control/assets/styles/global/_global.scss
+++ b/app/themes/mission-control/assets/styles/global/_global.scss
@@ -4,15 +4,18 @@
 // SCAFFOLDING
 // ============================================================
 
-* {
-  border: 0;
+html {
   box-sizing: border-box;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-  vertical-align: baseline;
 }
 
+*,
+*:before,
+*:after {
+  border: 0;
+  box-sizing: inherit;
+  outline: 0;
+  vertical-align: baseline;
+}
 
 body,
 html {
