--- a/app/themes/mission-control/assets/styles/main.scss
+++ b/app/themes/mission-control/assets/styles/main.scss
@@ -5,7 +5,7 @@
 // =============================================================================
 
 @charset 'UTF-8';
-@import '../../bower_components/sanitize-css/lib/sanitize.scss';              // Sanitize
+@import '../../node_modules/sanitize.css/lib/sanitize.scss';              // Sanitize
 @import 'bourbon';    // Bourbon
 @import 'neat';       // Neat
 
