Bourbon in the gulpfile stopped working, optd for the scss path

--- a/app/themes/mission-control/assets/styles/main.scss
+++ b/app/themes/mission-control/assets/styles/main.scss
@@ -5,9 +5,9 @@
 // =============================================================================
 
 @charset 'UTF-8';
-@import '../../node_modules/sanitize.css/lib/sanitize.scss';              // Sanitize
-@import 'bourbon';    // Bourbon
-@import 'neat';       // Neat
+@import '../../node_modules/sanitize.css/lib/sanitize.scss';                  // Sanitize
+@import '../../node_modules/bourbon/app/assets/stylesheets/bourbon';          // Bourbon
+@import 'neat';                                                               // Neat
 
 // THEME STYLES
 // =============================================================================
