Update sass, change transitions to mixins

--- a/app/themes/mission-control/assets/sass/partials/global/typography/_type-links.scss
+++ b/app/themes/mission-control/assets/sass/partials/global/typography/_type-links.scss
@@ -2,7 +2,7 @@
 // ============================================================
 
 a {
-  @extend %standard-trans;
+  @include standard-trans();
   color: $base-link-color;
   text-decoration: none;
 
