Closes #56 - Change out extends to mixins

--- a/app/themes/mission-control/assets/sass/partials/global/typography/_type-lists.scss
+++ b/app/themes/mission-control/assets/sass/partials/global/typography/_type-lists.scss
@@ -2,9 +2,9 @@
 // -----------
 
 .list-inline {
-  @extend %list-inline;
+  @include list-inline;
 }
 
 .list-unstyled {
-  @extend %list-unstyled;
+  @include list-unstyled;
 }
