--- a/app/themes/mission-control/assets/sass/partials/components/_buttons.scss
+++ b/app/themes/mission-control/assets/sass/partials/components/_buttons.scss
@@ -2,10 +2,10 @@
 // -------------
 
 .btn {
-  @extend %btn-reset;
+  @include btn-reset();
 }
 
 #{$all-buttons},
 .btn-default {
-  @extend %btn-reset;
+  @include btn-reset();
 }
