opt for single quote

--- a/app/themes/mission-control/assets/sass/partials/utilities/variables/_var-fonts.scss
+++ b/app/themes/mission-control/assets/sass/partials/utilities/variables/_var-fonts.scss
@@ -4,7 +4,7 @@
 // Font-Face: http://bourbon.io/docs/#font-face
 // =============================================================================
 
-// @include font-face("source-sans-pro", "/app/themes/mission-control/dist/fonts/source-sans-pro-regular");
+// @include font-face('source-sans-pro', '/app/themes/mission-control/dist/fonts/source-sans-pro-regular');
 
 // Fonts
 // =============================================================================
