added em base fix to global.scss

--- a/app/themes/mission-control/assets/sass/partials/global/_global.scss
+++ b/app/themes/mission-control/assets/sass/partials/global/_global.scss
@@ -4,6 +4,10 @@
 // SCAFFOLDING
 // =============================================================================
 
+:root {
+  font-size: $em-base;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -44,5 +48,3 @@ body {
   height: 1px;
   overflow: hidden;
 }
-
-
