Update code formatting in lib, update header and footer sass directory locations, add theme-modules (in lib and scss/components)

--- a/app/themes/mission-control/assets/sass/partials/components/base.scss
+++ b/app/themes/mission-control/assets/sass/partials/components/base.scss
@@ -1,5 +1,8 @@
 // Base: Components
 // ----------------
 
+@import 'header/base';              // Site Header
+@import 'footer/base';              // Site Footer
 @import 'buttons';                  // Button Styles
-@import 'sliders';                  // Slider Styles
+@import 'sliders';                  // Sliders
+@import 'modules/base';             // Individual module styles
