--- a/app/themes/mission-control/assets/sass/partials/global/base.scss
+++ b/app/themes/mission-control/assets/sass/partials/global/base.scss
@@ -4,3 +4,5 @@
 @import 'global';           // Base global styles
 @import 'typography/base';  // Typography
 @import 'scaffolding';      // Base scaffolding styles
+@import 'header/base';      // Site header
+@import 'footer/base';      // Site footer
