updated sans-serif to sans

--- a/app/themes/mission-control/assets/sass/partials/global/typography/_type-styles.scss
+++ b/app/themes/mission-control/assets/sass/partials/global/typography/_type-styles.scss
@@ -40,23 +40,23 @@ strong {
 
 // Sans Serif
 
-.xl-sans-serif {
-  font-family: $sans-serif;
+.xl-sans {
+  font-family: $sans;
   font-size: rem(75);
 }
 
-.lg-sans-serif {
-  font-family: $sans-serif;
+.lg-sans {
+  font-family: $sans;
   font-size: rem(50);
 }
 
-.md-sans-serif {
-  font-family: $sans-serif;
+.md-sans {
+  font-family: $sans;
   font-size: rem(25);
 }
 
-.sm-sans-serif {
-  font-family: $sans-serif;
+.sm-sans {
+  font-family: $sans;
   font-size: rem(10);
 }
 
@@ -84,23 +84,23 @@ strong {
 
 // Sans Serif Alt
 
-.xl-sans-serif-alt {
-  font-family: $sans-serif-alt;
+.xl-sans-alt {
+  font-family: $sans-alt;
   font-size: rem(75);
 }
 
-.lg-sans-serif-alt {
-  font-family: $sans-serif-alt;
+.lg-sans-alt {
+  font-family: $sans-alt;
   font-size: rem(50);
 }
 
-.md-sans-serif-alt {
-  font-family: $sans-serif-alt;
+.md-sans-alt {
+  font-family: $sans-alt;
   font-size: rem(25);
 }
 
-.sm-sans-serif-alt {
-  font-family: $sans-serif-alt;
+.sm-sans-alt {
+  font-family: $sans-alt;
   font-size: rem(10);
 }
 
