--- a/app/themes/mission-control/assets/sass/partials/utilities/variables/_var-fonts.scss
+++ b/app/themes/mission-control/assets/sass/partials/utilities/variables/_var-fonts.scss
@@ -10,10 +10,10 @@
 // =============================================================================
 
 $serif:							      $georgia;
-$sans-serif:						  $helvetica;
+$sans:						  $helvetica;
 $serif-alt:               $serif;
-$sans-serif-alt:          $sans-serif;
-$base-font-family:        $sans-serif;
+$sans-alt:          $sans;
+$base-font-family:        $sans;
 
 // Font Sizes
 // =============================================================================
