added font-face import

--- a/app/themes/mission-control/assets/sass/partials/global/base.scss
+++ b/app/themes/mission-control/assets/sass/partials/global/base.scss
@@ -1,6 +1,7 @@
 // Base: Global
 // ------------
 
+@import 'font-face';        // Font Face
 @import 'global';           // Base global styles
 @import 'typography/base';  // Typography
 @import 'scaffolding';      // Base scaffolding styles
