Fix to sanitize.css import, update `build_sass` gulp task `build_sass` not creates a non-minified file in `src/css`. `gulp-autoprefixer` added to package.json for non-production builds.

--- a/app/themes/mission-control/assets/sass/main/main.scss
+++ b/app/themes/mission-control/assets/sass/main/main.scss
@@ -5,7 +5,7 @@
 // =============================================================================
 
 @charset 'UTF-8';
-// @import '../../../node_modules/sanitize.css/lib/sanitize.scss';                // Sanitize
+@import '../../../node_modules/sanitize.css/sanitize';                     // Sanitize
 @import '../../../node_modules/bourbon/app/assets/stylesheets/bourbon.scss';   // Bourbon
 @import '../../../node_modules/bourbon-neat/app/assets/stylesheets/neat.scss'; // Neat
 
