--- a/app/themes/mission-control/assets/sass/partials/global/_global.scss
+++ b/app/themes/mission-control/assets/sass/partials/global/_global.scss
@@ -11,8 +11,8 @@ html {
 *,
 *:before,
 *:after {
-  margin: 0;
-  padding: 0;
+  // margin: 0;
+  // padding: 0;
   border: 0;
   box-sizing: inherit;
   outline: 0;
