--- a/app/themes/mission-control/assets/sass/partials/global/_utility-classes.scss
+++ b/app/themes/mission-control/assets/sass/partials/global/_utility-classes.scss
@@ -1,3 +1,6 @@
+// Utility Classes
+// ---------------
+
 // Wordpress Screen Reader Class
 .screen-reader-text {
   position: absolute !important;
@@ -8,9 +11,31 @@
   overflow: hidden;
 }
 
+// WordPress Video Embed Wrapper
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+
+  iframe,
+  object,
+  embed,
+  video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 // Text and Background Color Classes
 // See $color-styles in sass/utilities/variables/_var-colors.scss
 @each $name, $value in $color-styles {
   .#{$name} { color: $value; }
   ._#{$name} { background-color: $value; }
+  .fill-#{$name} { fill: $value; }
 }
+
+
