--- a/app/themes/mission-control/assets/sass/partials/utilities/extends/_ext-type.scss
+++ b/app/themes/mission-control/assets/sass/partials/utilities/extends/_ext-type.scss
@@ -6,6 +6,7 @@
 // =============================================================================
 
 %header-reset {
+  font-size: $base-font-size;
   font-weight: 400;
   margin: 0;
   padding: 0;
