updated boilerplate scaffolding

--- a/app/themes/mission-control/assets/sass/partials/global/_scaffolding.scss
+++ b/app/themes/mission-control/assets/sass/partials/global/_scaffolding.scss
@@ -10,9 +10,23 @@
   @include base-container();
 }
 
+.row {
+  @include row();
+}
+
+.section-padding {
+  padding-bottom: $space-lg;
+  padding-top: $space-lg;
+
+  @include media($medium) {
+    padding-bottom: $space-xl;
+    padding-top: $space-xl;
+  }
+}
+
 // Sidebar
-.sidebar-primary {
-  .content-column {
+.sidebar-right {
+  .main-content {
 
     @include media($medium) {
       @include span-columns(7);
